--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,4 +1,10 @@
-log4j.rootLogger=DEBUG, CONSOLE
-log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss.SSS} %c - %m%n
+log4j.rootLogger=DEBUG, F
+#log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+#log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+#log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss.SSS} %c - %m%n
+log4j.appender.F=org.apache.log4j.FileAppender
+log4j.appender.F.File=out.log
+log4j.appender.F.layout=org.apache.log4j.PatternLayout
+log4j.appender.F.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L) %3x - %m%n
+# Set the append to false, overwrite
+log4j.appender.F.Append=false
